--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
      <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/corner.css">
-    <title>Kushagra TO Do</title>
+    <title>TO Do List</title>
 
 </head>
 
